<?xml version="1.0"?>
<package format="2">
  <name>ed_moveit</name>
  <version>0.0.0</version>
  <description>The ed_moveit package</description>

  <maintainer email="amigo@todo.todo">Matthijs van der Burgh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ed</depend>
  <depend>geolib2</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>roscpp</depend>
  <depend>shape_msgs</depend>
  <depend>std_srvs</depend>

</package>
