<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_moveit</name>
  <version>0.0.0</version>
  <description>The ed_moveit package</description>

  <author email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</author>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ed</depend>
  <depend>geolib2</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>roscpp</depend>
  <depend>shape_msgs</depend>
  <depend>std_srvs</depend>

</package>
